--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
-name = "openeval"
+name = "openeval-cli"
 version = "0.1.0"
-description = "Open-source LLM evaluation framework with CLI-first workflow and CI/CD quality gates"
+description = "CLI-first LLM evaluation framework — like Pytest for AI agents"
 readme = "README.md"
 license = {text = "MIT"}
 requires-python = ">=3.10"
@@ -55,6 +55,9 @@ openeval = "openeval.cli:main"
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
+
+[tool.hatch.build.targets.wheel]
+packages = ["openeval"]
 
 [tool.pytest.ini_options]
 testpaths = ["tests"]
